adding dots at the beggining of every image link

--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
             </div>
             <div class="right">
                 <!-- IMAGE HERE -->
-                <img src="/images/woman-graduate-school-university.jpeg" alt="">
+                <img src="./images/woman-graduate-school-university.jpeg" alt="">
             </div>
         </div>
 
         <div class="imagesSection">
-            <img src="/images/image1.jpg" alt="">
-            <img src="/images/image2.JPG" alt="">
-            <img src="/images/image3.JPG" alt="">
+            <img src="./images/image1.jpg" alt="">
+            <img src="./images/image2.JPG" alt="">
+            <img src="./images/image3.JPG" alt="">
         </div>
 
         <article>
