--- a/index.html
+++ b/index.html
@@ -98,16 +98,16 @@
             <div class="top">
                 <h2>Connect With Us!</h2>
                 <div class="icons" id="icons">
-                <li><a href="https://www.facebook.com/gradsmobileapp/" target="__blank"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="https://www.instagram.com/gradsmobileapp/" target="__blank"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="https://www.linkedin.com/company/grads-mobile-app/" target="__blank"><i class="fab fa-linkedin"></i></a></li>
-            </div>
+                    <li><a href="https://www.facebook.com/gradsmobileapp/" target="__blank"><i class="fab fa-facebook"></i></a></li>
+                    <li><a href="https://www.instagram.com/gradsmobileapp/" target="__blank"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="https://www.linkedin.com/company/grads-mobile-app/" target="__blank"><i class="fab fa-linkedin"></i></a></li>
+                </div>
             <div class="bottom">
                 <div class="hide">
-                <h2>Download our app!</h2>
+                    <h2>Download our app!</h2>
                     <div class="apple"><a href="https://www.google.com/url?q=https%3A%2F%2Fapps.apple.com%2Fus%2Fapp%2Fgrads-app%2Fid1524440253&sa=D&sntz=1&usg=AOvVaw3H_wLYOKzawFdm1g1bm9Pq" target="__blank"><img src="images/apple.JPEG" alt=""></a></div>
                     <div class="google"><a href="https://play.google.com/store/apps/details?id=com.app.grads" target="__blank"><img src="images/google.JPEG" alt=""></a></div>
-                </a>
+                    </a>
                 </div>
             </div>
             </div> 
@@ -120,9 +120,9 @@
         </div>
 
         <div class="contact" id="contact">
-            <h2>Contact Us</h2>
-                <li><a href="tel:6124069934">Call Us: (612) 406 9934</a></li>
-                <li><a href="mailto:nali@gradsmobileapp.com">Mail Us: nali@gradsmobileapp.com</a></li>
+            <h2>Contact us!</h2>
+                <li><a href="tel:6124069934">Call us: (612) 406 9934</a></li>
+                <li><a href="mailto:nali@gradsmobileapp.com">Mail us: nali@gradsmobileapp.com</a></li>
         </div>
     </footer>
 
