--- a/index.html
+++ b/index.html
@@ -75,19 +75,19 @@
             </div>
             
             <div class="right">
-                <ul>
                     <h2>Check out what makes us unique!</h2>
-                    <li>Free app for all students.</li>
-                    <li>Users are verified. No scammers.</li>
-                    <li>List tutoring if you are good at a course so that you can help another student while making some extra cash.</li>
-                    <li>Buy used textbooks from senior students than paying 10 times more for a new book.</li>
-                    <li>Anonymously rate roommates so that you don’t have to get nervous every time you have to move in with a stranger.</li>
-                    <li>When you are driving to Walmart, offer a ride to another student under "Rideshare" and make some cash.</li>
-                    <li>Going home for Christmas? List your room for a few days under "Housing".</li>
-                    <li>Made extra cookies at home and don’t wanna throw away? List is under "Food". Have tons of things you don't use and want to get rid of them? List them under "Miscellaneous".</li>
-                    <li>Use different payment methods to transfer funds. You can pay in cash or use different apps. Grads also has its own payment method, "Stripe".</li>
-                    <li>Many more exciting stuff.</li>
-                </ul>
+                    <ul>
+                        <li>Free app for all students.</li>
+                        <li>Verified users to prevent scammers.</li>
+                        <li>List tutoring services and earn money while helping other students.</li>
+                        <li>Buy used textbooks from senior students to save money.</li>
+                        <li>Anonymously rate roommates for stress-free living arrangements.</li>
+                        <li>Offer rides to other students and earn money through "Rideshare".</li>
+                        <li>List your room for short-term stays during holidays under "Housing".</li>
+                        <li>Get rid of extra food or unused items by listing them under "Food" or "Miscellaneous".</li>
+                        <li>Multiple payment options available including "Stripe".</li>
+                        <li>And many more exciting features!</li>
+                    </ul>
             </div>
             
         </article>
