--- a/carrers.html
+++ b/carrers.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- fontawesome -->
+    <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/1cd92f7aef.js" crossorigin="anonymous"></script>
 
     <!-- bootstrap link CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+
+    <!-- favicon  -->
+    <link rel="shortcut icon" type="image/png" href="images/favicon_io (1)/android-chrome-192x192.png">
+
     <title>Carrers</title>
 </head>
 <body>
