--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <!-- bootstrap link CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    
+    <!-- favicon  -->
+    <link rel="shortcut icon" type="image/png" href="images/favicon_io (1)/android-chrome-192x192.png">
     <title>Grads</title>
 </head>
 <body>
