--- a/carrers.html
+++ b/carrers.html
@@ -52,7 +52,7 @@
                 <br>
                 <hr style="height: 2px; color: black;">
 
-                <strong>Please fill out an application form and it takes less than 5 minutes: <a href="https://forms.gle/nFXd7tm9Bkw6w1RS6" target="__blank" style="color:rgb(255, 0, 0)">Brand Ambassador Application</a>.</strong>
+                <strong>Kindly complete our Brand Ambassador Application form which can be easily filled out in less than five minutes by following this link: <a href="https://forms.gle/nFXd7tm9Bkw6w1RS6" target="__blank" style="color:rgb(255, 0, 0)">Brand Ambassador Application</a>.</strong>
                 
             </div>
     </div>
