fixing link to googleplay

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <p>Links to download the app:</p>
                 <ul>
                     <li>AppStore <a href="https://apps.apple.com/us/app/grads-app/id1524440253">here</a></li>
-                    <li>GooglePlay <a href="https://www.gradsmobile.app/#:~:text=Googleplay-,here,-Grads%20is%20a">here</a></li>
+                    <li>GooglePlay <a href="https://play.google.com/store/apps/details?id=com.app.grads">here</a></li>
                 </ul>
             </div>
             <div class="right">
