--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 <h2>Relieving Student Hardships In College Because Student Life Is Not Easy...</h2>
                 <p>Links to download the app:</p>
                 <ul>
-                    <li>AppStore <a href="https://apps.apple.com/us/app/grads-app/id1524440253">here</a></li>
-                    <li>GooglePlay <a href="https://play.google.com/store/apps/details?id=com.app.grads">here</a></li>
+                    <li>AppStore <a href="https://apps.apple.com/us/app/grads-app/id1524440253" target="_blank">here</a></li>
+                    <li>GooglePlay <a href="https://play.google.com/store/apps/details?id=com.app.grads" target="_blank">here</a></li>
                 </ul>
             </div>
             <div class="right">
@@ -102,9 +102,9 @@
                 <div class="top">
                     <h2>Connect With Us!</h2>
                     <div class="icons" id="icons">
-                        <li><a href="https://www.facebook.com/gradsmobileapp/" target="__blank"><i class="fab fa-facebook"></i></a></li>
-                        <li><a href="https://www.instagram.com/gradsmobileapp/" target="__blank"><i class="fab fa-instagram"></i></a></li>
-                        <li><a href="https://www.linkedin.com/company/grads-mobile-app/" target="__blank"><i class="fab fa-linkedin"></i></a></li>
+                        <li><a href="https://www.facebook.com/gradsmobileapp/" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                        <li><a href="https://www.instagram.com/gradsmobileapp/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="https://www.linkedin.com/company/grads-mobile-app/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
                     </div>
                 <div class="bottom">
                     <div class="hide">
