--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                 <div class="bottom">
                     <div class="hide">
                         <h2>Download our app!</h2>
-                        <div class="apple"><a href="https://www.google.com/url?q=https%3A%2F%2Fapps.apple.com%2Fus%2Fapp%2Fgrads-app%2Fid1524440253&sa=D&sntz=1&usg=AOvVaw3H_wLYOKzawFdm1g1bm9Pq" target="__blank"><img src="images/apple.JPEG" alt=""></a></div>
-                        <div class="google"><a href="https://play.google.com/store/apps/details?id=com.app.grads" target="__blank"><img src="images/google.JPEG" alt=""></a></div>
+                        <div class="apple"><a href="https://www.google.com/url?q=https%3A%2F%2Fapps.apple.com%2Fus%2Fapp%2Fgrads-app%2Fid1524440253&sa=D&sntz=1&usg=AOvVaw3H_wLYOKzawFdm1g1bm9Pq" target="_blank"><img src="images/apple.JPEG" alt=""></a></div>
+                        <div class="google"><a href="https://play.google.com/store/apps/details?id=com.app.grads" target="_blank"><img src="images/google.JPEG" alt=""></a></div>
                         </a>
                     </div>
                 </div>
@@ -118,8 +118,8 @@
             </div>
             <div class="getIt">
                 <h2>Download our FREE app now!</h2>
-                <div class="apple"><a href="https://www.google.com/url?q=https%3A%2F%2Fapps.apple.com%2Fus%2Fapp%2Fgrads-app%2Fid1524440253&sa=D&sntz=1&usg=AOvVaw3H_wLYOKzawFdm1g1bm9Pq" target="__blank"><img src="images/apple.JPEG" alt=""></a></div>
-                        <div class="google"><a href="https://play.google.com/store/apps/details?id=com.app.grads" target="__blank"><img src="images/google.JPEG" alt=""></a></div>
+                <div class="apple"><a href="https://www.google.com/url?q=https%3A%2F%2Fapps.apple.com%2Fus%2Fapp%2Fgrads-app%2Fid1524440253&sa=D&sntz=1&usg=AOvVaw3H_wLYOKzawFdm1g1bm9Pq" target="_blank"><img src="images/apple.JPEG" alt=""></a></div>
+                        <div class="google"><a href="https://play.google.com/store/apps/details?id=com.app.grads" target="_blank"><img src="images/google.JPEG" alt=""></a></div>
             </div>
             <div class="contact" id="contact">
                 <h2>Contact us!</h2>
