adding comments to my images

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
             </div>
             <div class="right">
                 <!-- IMAGE HERE -->
-                <img src="./images/woman-graduate-school-university.jpeg" alt="">
+                <img src="./images/woman-graduate-school-university.jpeg" alt="A woman wearing a graduation gown and cap, standing in front of a university building">
+
             </div>
         </div>
 
@@ -90,9 +91,9 @@
         </article>
 
         <div class="imagesSection">
-            <img src="./images/image1.jpg" alt="">
-            <img src="./images/image2.JPG" alt="">
-            <img src="./images/image3.JPG" alt="">
+            <img src="./images/image1.jpg" alt="Two man in front of a computer looking and writing notes down">
+            <img src="./images/image2.JPG" alt="Four women celebrating their graduation">
+            <img src="./images/image3.JPG" alt="Two students usign their computers in a classroom">
         </div>
     </main>
 
@@ -118,8 +119,8 @@
             </div>
             <div class="getIt">
                 <h2>Download our FREE app now!</h2>
-                <div class="apple"><a href="https://www.google.com/url?q=https%3A%2F%2Fapps.apple.com%2Fus%2Fapp%2Fgrads-app%2Fid1524440253&sa=D&sntz=1&usg=AOvVaw3H_wLYOKzawFdm1g1bm9Pq" target="_blank"><img src="images/apple.JPEG" alt=""></a></div>
-                        <div class="google"><a href="https://play.google.com/store/apps/details?id=com.app.grads" target="_blank"><img src="images/google.JPEG" alt=""></a></div>
+                <div class="apple"><a href="https://www.google.com/url?q=https%3A%2F%2Fapps.apple.com%2Fus%2Fapp%2Fgrads-app%2Fid1524440253&sa=D&sntz=1&usg=AOvVaw3H_wLYOKzawFdm1g1bm9Pq" target="_blank"><img src="images/apple.JPEG" alt="AppleStore logo for downloads"></a></div>
+                        <div class="google"><a href="https://play.google.com/store/apps/details?id=com.app.grads" target="_blank"><img src="images/google.JPEG" alt="GooglePlay logo for downloads"></a></div>
             </div>
             <div class="contact" id="contact">
                 <h2>Contact us!</h2>
