adding js for slide

--- a/index.html
+++ b/index.html
@@ -42,11 +42,50 @@
     </header>
     <!-- When click the button, then navbar displays -->
     <main>
-        <div class="hero">
-            <h1>Grads Mobile App</h1>
-        </div>
 
-        
+        <!-- <div class="hero">
+            <h1>Grads Mobile App</h1>
+        </div> -->
+
+        <div class="slider">
+
+                <div class="slide">
+                    <!-- slide content goes here -->
+                    <div class="hero">
+                        <h1>Grads Mobile App</h1>
+                    </div>
+                </div>
+
+                <div class="slide">
+                    <!-- slide content goes here -->
+                    <div class="marketPlace">
+                        <h1>Extra Cash by Selling study material</h1>
+                    </div>
+                </div>
+
+                <div class="slide">
+                    <!-- slide content goes here -->
+                    <div class="tutoring">
+                        <h1>listing tutoring sessions</h1>
+                    </div>
+                </div>
+
+                <div class="slide">
+                    <!-- slide content goes here -->
+                    <div class="rating">
+                        <h1>Anonymously rate school mates </h1>
+                    </div>
+                </div>
+
+                <div class="slide">
+                    <!-- slide content goes here -->
+                    <div class="rideShare">
+                        <h1>Offer rides to other students and earn money through "Rideshare"</h1>
+                    </div>
+                </div>
+
+          </div>
+          
 
         <div class="linksSection">
 
@@ -132,8 +171,8 @@
             Thanks for visiting our site! We hope you enjoyed exploring our content as much as we enjoyed creating it. Don't forget to follow us on social media to stay up-to-date with our latest news and updates. And if you really liked what you saw, be sure to download our app from the App Store or Google Play to experience even more exclusive content and features. We appreciate your support and look forward to connecting with you!
         </p>
     </footer>
-
-
+    <!-- local javaScript -->
+    <script src="js.js"></script>
     <!-- bootstrap for javaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
     <!-- bootstrap link JS -->
