needs to adjust h1 inside slider

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="slide">
                     <!-- slide content goes here -->
                     <div class="rideShare">
-                        <h1>Offer rides to other students and earn money through "Rideshare"</h1>
+                        <h1>Rideshare for extra money</h1>
                     </div>
                 </div>
 
