--- a/index.html
+++ b/index.html
@@ -50,39 +50,36 @@
         <div class="slider">
 
                 <div class="slide">
-                    <!-- slide content goes here -->
+                    <h1>Grads Mobile App</h1>
                     <div class="hero">
-                        <h1>Grads Mobile App</h1>
+                        <img src="./images/hero.jpg" alt="">
                     </div>
                 </div>
 
-                <div class="slide">
-                    <!-- slide content goes here -->
+                <!-- <div class="slide">
                     <div class="marketPlace">
+                        <img src="images/cash.avif" alt="">
                         <h1>Extra Cash by Selling study material</h1>
                     </div>
                 </div>
 
                 <div class="slide">
-                    <!-- slide content goes here -->
                     <div class="tutoring">
                         <h1>listing tutoring sessions</h1>
                     </div>
                 </div>
 
                 <div class="slide">
-                    <!-- slide content goes here -->
                     <div class="rating">
                         <h1>Anonymously rate school mates </h1>
                     </div>
                 </div>
 
                 <div class="slide">
-                    <!-- slide content goes here -->
                     <div class="rideShare">
                         <h1>Rideshare for extra money</h1>
                     </div>
-                </div>
+                </div> -->
 
           </div>
           
