--- a/index.html
+++ b/index.html
@@ -52,35 +52,35 @@
                 <div class="slide">
                     <h1>Grads Mobile App</h1>
                     <div class="hero">
-                        <img src="./images/hero.jpg" alt="">
+                        <!-- <img src="./images/hero.jpg" alt=""> -->
                     </div>
                 </div>
 
                 <div class="slide">
                     <h1>Make some extra cash!</h1>
                     <div class="marketPlace">
-                        <img src="images/cash.avif" alt="">
+                        <!-- <img src="images/cash.avif" alt=""> -->
                     </div>
                 </div>
 
                 <div class="slide">
                     <h1>List tutoring sessions</h1>
                     <div class="tutoring">
-                        <img src="images/tutoring.jpg" alt="">
+                        <!-- <img src="images/tutoring.jpg" alt=""> -->
                     </div>
                 </div>
                 
                 <div class="slide">
                     <h1>Anonymously rate school mates </h1>
                     <div class="rating">
-                        <img src="images/rating.jpg" alt="">
+                        <!-- <img src="images/rating.jpg" alt=""> -->
                     </div>
                 </div>
                 
                 <div class="slide">
                     <h1>Rideshare for extra money</h1>
                     <div class="rideShare">
-                        <img src="images/rideshare.jpeg" alt="">
+                        <!-- <img src="images/rideshare.jpg" alt=""> -->
                     </div>
                 </div>
           </div>
