adding contact form

--- a/about.html
+++ b/about.html
@@ -41,13 +41,13 @@
           </nav>
     </header>
     <article style="display: block;">
-        <p>Welcome to [Grads Mobile App!], a leading provider of [student specific resource] solutions for [college students]. Our company was founded in [2020] with a vision to [Help Students All Across]. Since then, we have been dedicated to providing our students with the highest quality [student-specific resources] and exceptional customer service.</p>
+        <p>Welcome to Grads Mobile App! a leading provider of student specific resource solutions for college students. Our company was founded in 2020 with a vision to help students all across. Since then, we have been dedicated to providing our students with the highest quality student-specific resources and exceptional customer service.</p>
 
-                <p>Our team is made up of experienced professionals who are passionate about what they do. We work tirelessly to ensure that our solutions meet the unique needs of each and every customer. Whether you're looking for [any student specific resources to get through that busy student life], or need help with [a specific problem], we are here to help.</p>
+        <p>Our team is made up of experienced professionals who are passionate about what they do. We work tirelessly to ensure that our solutions meet the unique needs of each and every customer. Whether you're looking for a student specific resources to get through that busy student life], or need help with a specific problem, we are here to help.</p>
 
-                <p>At [Grads], we believe in giving back to the community. That's why we are committed to supporting a variety of [charitable cause or organizations such as sponsoring students and supporting them]. We also prioritize environmental sustainability in our operations and are always looking for ways to reduce our carbon footprint.</p>
+        <p>At Grads, we believe in giving back to the community. That's why we are committed to supporting a variety of charitable cause or organizations such as sponsoring students and supporting them. We also prioritize environmental sustainability in our operations and are always looking for ways to reduce our carbon footprint.</p>
 
-                <p>Thank you for considering [Grads] for your [academic and student] needs. We are confident that our solutions will exceed your expectations, and we look forward to serving you. If you have any questions or would like to learn more about our company, please don't hesitate to contact us.</p>
+        <p>Thank you for considering Grads for your academic and student needs. We are confident that our solutions will exceed your expectations, and we look forward to serving you. If you have any questions or would like to learn more about our company, please don't hesitate to contact us.</p>
     </article>
 
     <!-- local javaScript -->
