needs to fix images

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <!-- <img src="./images/woman-graduate-school-university.jpeg" alt="A woman wearing a graduation gown and cap, standing in front of a university building"> -->
                 <div class="container">
                     <div class="row">
-                        <div class="col">
+                        <div class="col" id="image0">
                             
                         </div>
 
