--- a/carrers.html
+++ b/carrers.html
@@ -88,9 +88,9 @@
                     <li><a href="mailto:nali@gradsmobileapp.com">Mail us: nali@gradsmobileapp.com</a></li>
             </div>
         </div>
-        <p class="disclaimer">
+        <!-- <p class="disclaimer">
             Thanks for visiting our site! We hope you enjoyed exploring our content as much as we enjoyed creating it. Don't forget to follow us on social media to stay up-to-date with our latest news and updates. And if you really liked what you saw, be sure to download our app from the App Store or Google Play to experience even more exclusive content and features. We appreciate your support and look forward to connecting with you!
-        </p>
+        </p> -->
     </footer>
         <!-- bootstrap for javaScript -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
