--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
                 <div class="left">
                     <!-- image -->
-                    <!-- <img src="./images/cash.jpg" alt=""> -->
+                    <img src="./images/cash.jpg" alt="">
                 </div>
             </article>
 
@@ -215,7 +215,7 @@
             <article id="miscelaneas">
                 <div class="left">
                     <!-- image -->
-                    <!-- <img src="./images/sections/miscelaneas.jpg" alt=""> -->
+                    <img src="./images/sections/miscelaneas.jpg" alt="">
                 </div>
                 <div class="right text">
                     <div class="black">
