--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </ul> -->
                 <h2>What is Grads?</h2>
                 
-                <p>Grads is a <strong>FREE</strong> and secure marketplace for all students. 
+                <p>Grads is a <strong>FREE</strong> and secure marketplace <strong>APP</strong> for all students. 
                     users can not only find products and services they need to assist
                     them in their studies, as it is also a platform they could profit out of
                     by listing items for sell, places to rent, or services to provide.</p>
