--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
   </style>
       <header>
         <nav class="navbar navbar-expand-lg navbar-light">
-            <a href=""><img src="./images/logo.PNG" alt=""></a>
+            <a href="index.html"><img src="./images/logo.PNG" alt=""></a>
             
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
