--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                 </li>
                 
                 <li class="nav-item">
-                  <a class="nav-link text-light" href="#contact">Contact</a>
+                  <a class="nav-link text-light" href="index.html#contact">Contact</a>
                 </li>
 
                 <li class="nav-item">
