--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                         <div class="col-lg-8 offset-lg-2">
                             <h2>Contact Us</h2>
                             <p>Have a question or feedback for us? Fill out the form below and we will get back to you as soon as possible.</p>
-                            <form action="" method="POST">
+                            <form action="https://formsubmit.co/nali@gradsmobileapp.com" method="POST">
                                 <div class="form-group">
                                     <input type="text" class="form-control" name="name" placeholder="Your Name">
                                 </div>
