--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             Download our free app today to see how we stand out and each feature that
                             makes us unique!
                             <a href="">IOS</a> or
-                            <a href="">Android</a>
+                            <a href="">Android</a>.
                     </p>
         
                 
@@ -183,8 +183,8 @@
                 <div class="right text">
                     <div class="black">
                         <h2>Get that study group going!</h2>
-                        <li>Create study groups of your own</li>
-                        <li>Find and join study groups </li>
+                        <li>Create study groups of your own.</li>
+                        <li>Find and join study groups.</li>
                     </div>
                 </div>
             </article>
@@ -195,12 +195,12 @@
                     <div class="red">
                         <h2>Make some extra $$$ & find what you need!</h2>
                        <ul>
-                           <li>Buy or list courses for sale</li>
-                           <li>Buy or list books for sale</li>
-                           <li>Find or list tutoring sessions</li>
-                           <li>Find or list housing options</li>
-                           <li>Buy or sell personal items</li>
-                           <li>Book a trip to get to class on time </li>
+                           <li>Buy or list courses for sale.</li>
+                           <li>Buy or list books for sale.</li>
+                           <li>Find or list tutoring sessions.</li>
+                           <li>Find or list housing options.</li>
+                           <li>Buy or sell personal items.</li>
+                           <li>Book a trip to get to class on time.</li>
                        </ul>
                     </div>
                 </div>
@@ -220,11 +220,11 @@
                 <div class="right text">
                     <div class="black">
                         <h2>Donate unused items!</h2>
-                        <li>Extra food that are good for consumption</li>
-                        <li>Usused furniture for some extra space</li>
-                        <li>General unused items you just want to get rid of</li>
+                        <li>Extra food that are good for consumption.</li>
+                        <li>Usused furniture for some extra space.</li>
+                        <li>General unused items you just want to get rid of.</li>
                         <br>
-                        <h2>Rate roommates</h2>
+                        <h2>Rate roommates.</h2>
                         <li>Anonymously rate roommates for stress-free living arrangements.</li>
                     </div>
                 </div>
