--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     }
 
     footer {
-      position:absolute;
+      /* position:absolute; */
       bottom: 0;
       left: 0;
       right: 0;
