--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                         <p class="download">
                                 Download our free app today to see how we stand out and each feature that
                                 makes us unique!
-                                <a href="">IOS</a> or
-                                <a href="">Android</a>.
+                                <a href="https://www.google.com/url?q=https%3A%2F%2Fapps.apple.com%2Fus%2Fapp%2Fgrads-app%2Fid1524440253&sa=D&sntz=1&usg=AOvVaw3H_wLYOKzawFdm1g1bm9Pq" target="_blank">IOS</a> or
+                                <a href="https://play.google.com/store/apps/details?id=com.app.grads" target="_blank">Android</a>.
                         </p>
                 </div>
         
@@ -126,9 +126,9 @@
                 <!-- <img src="./images/woman-graduate-school-university.jpeg" alt="A woman wearing a graduation gown and cap, standing in front of a university building"> -->
                 <div class="container full-width">
                     <div class="row">
-                            <img src="images/screenshot/image1.PNG" alt="">
-                            <img src="images/screenshot/image2.PNG" alt="">
-                            <img src="images/screenshot/image3.PNG" alt="">
+                            <a href="images/screenshot/image1.PNG" target="_blank"><img src="images/screenshot/image1.PNG" alt=""></a>
+                            <a href="images/screenshot/image2.PNG" target="_blank"><img src="images/screenshot/image2.PNG" alt=""></a>
+                            <a href="images/screenshot/image3.PNG" target="_blank"><img src="images/screenshot/image3.PNG" alt=""></a>
                     </div>
                 </div>
 
