updating logo and favicon

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <link rel="stylesheet" href="style.css">
     
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/png" href="images/favicon_io (1)/android-chrome-192x192.png">
+    <!-- <link rel="shortcut icon" type="image/png" href="images/favicon_io (1)/android-chrome-192x192.png"> -->
+    <link rel="shortcut icon" type="image/png" href="images/favicon_io/favicon.ico">
 
     <title>Grads</title>
 </head>
@@ -23,7 +24,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
-            <a href=""><img src="./images/logo.PNG" alt=""></a>
+            <a href=""><img src="./images/logoupdated.PNG" alt=""></a>
             
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
