--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         </p>
 
                         <p style="color: yellow;">
-                            As a safety measure, it's required to have an email address ending in .edu to sign up.
+                            As a safety measure, a .edu email address is required in order to sign up.
                             
                             <!-- As a safety measure, students are required to use addresses ending in .edu to sign up. -->
                         </p>
