--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         </div>
             
         <div class="slide">
-            <h1>Anonymously rate school mates</h1>
-            <div class="rating"></div>
+            <h1>Couchsurfing for students</h1>
+            <div class="couchsurfing"></div>
         </div>
             
         <div class="slide">
@@ -223,7 +223,7 @@
             <article id="miscelaneas">
                 <div class="left">
                     <!-- image -->
-                    <img src="./images/sections/miscellaneous.jpg" alt="">
+                    <img src="./images/sections/couch1.jpg" alt="">
                 </div>
                 <div class="right text">
                     <div class="black">
@@ -232,8 +232,8 @@
                         <li>Usused furniture for some extra space.</li>
                         <li>General unused items you just want to get rid of.</li>
                         <br>
-                        <h2>Rate roommates.</h2>
-                        <li>Anonymously rate roommates for stress-free living arrangements.</li>
+                        <h2>Couchsurfing</h2>
+                        <li>Find locals to share some space with at low cost!</li>
                     </div>
                 </div>
             </article>
