--- a/index.html
+++ b/index.html
@@ -238,6 +238,8 @@
                 </div>
             </article>
 
+            <div class="logoSection"><img src="images/logo!.PNG" alt="" class="logo"></div>
+
             <div class="downloadSection">
                 <h2>Download our app now and sign up for free!</h2>
                 <div class="content">
