trying to restyle

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             <article id="miscelaneas">
                 <div class="left">
                     <!-- image -->
-                    <!-- <img src="./images/sections/couch1.jpg" alt="" class="couchImage"> -->
+                    <img src="./images/sections/couch1.jpg" alt="" class="couchImage">
                 </div>
                 <div class="right text">
                     <div class="black">
