--- a/about.html
+++ b/about.html
@@ -68,11 +68,11 @@
     </header>
 
     <article style="display: block;">
-        <h2>A little bit bout our story</h2>
+        <h2>A little bit about our story</h2>
 
-        <p>Welcome to Grads Mobile App! a leading provider of student specific resource solutions for college students. Our company was founded in 2020 with a vision to help students all across. Since then, we have been dedicated to providing our students with the highest quality student-specific resources and exceptional customer service.</p>
+        <p>Welcome to Grads Mobile App! A leading provider of student specific resource solutions for college students. Our company was founded in 2020 with a vision to help students all across. Since then, we have been dedicated to providing our students with the highest quality student-specific resources and exceptional customer service.</p>
 
-        <p>Our team is made up of experienced professionals who are passionate about what they do. We work tirelessly to ensure that our solutions meet the unique needs of each and every customer. Whether you're looking for a student specific resources to get through that busy student life], or need help with a specific problem, we are here to help.</p>
+        <p>Our team is made up of experienced professionals who are passionate about what they do. We work tirelessly to ensure that our solutions meet the unique needs of each and every student. Whether you're looking for a student specific resource to get through that busy student life, or need help with a specific problem, we are here to help.</p>
 
         <p>At Grads, we believe in giving back to the community. That's why we are committed to supporting a variety of charitable cause or organizations such as sponsoring students and supporting them. We also prioritize environmental sustainability in our operations and are always looking for ways to reduce our carbon footprint.</p>
 
