--- a/carrers.html
+++ b/carrers.html
@@ -61,6 +61,10 @@
 
     <div class="main2">
         <div class="hero2"></div>
+        <div class="internshipImgContainer">
+            <img class="internshipImg" src="images/interenship.jpg" alt="">
+        </div>
+        
         <div class="title">
             <h2>INTERNSHIP!</h2>
         </div>
