--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
             </article>
 
             <div class="images">
-                <img src="./images/cash.jpg" alt="">
-                <img src="./images/sections/couch1.jpg" alt="" class="couchImage">
+                <img src="./images/cash.jpg" alt="" class="image1">
+                <img src="./images/sections/couch1.jpg" alt="" class="couchImage image1">
             </div>
 
             <!-- make money -->
