--- a/index.html
+++ b/index.html
@@ -339,9 +339,9 @@
                         <li><a href="mailto:nali@gradsmobileapp.com">Mail us: nali@gradsmobileapp.com</a></li>
                 </div>
             </div>
-            
         </div>
-        <p><a href="https://www.freepik.com/free-vector/v915-red_34378605.htm#query=footer%20background%20red&position=10&from_view=search&track=ais">Image by rawpixel.com</a> on Freepik</p>
+        <!-- <div class="redStripe"></div> -->
+        <!-- <p><a href="https://www.freepik.com/free-vector/v915-red_34378605.htm#query=footer%20background%20red&position=10&from_view=search&track=ais">Image by rawpixel.com</a> on Freepik</p> -->
     </footer>
     <!-- local javaScript -->
     <script src="js.js"></script>
