--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@400;700&family=Oswald&family=Roboto:wght@100&family=Staatliches&display=swap" rel="stylesheet">
 
     <title>Grads</title>
 </head>
