--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
         <!-- TODO: insert everything in containers like in the about section -->
         <!-- STUDY GROUP SECTION -->
-        <div class="body">
+        <div class="body firstBody">
                  <!-- studygroup -->
                  <article id="studyGroupsSection">
                     <div class="left image">
