fixing padding about page

--- a/about.html
+++ b/about.html
@@ -38,6 +38,12 @@
     h2 {
       margin-bottom: 50px;
     }
+
+    @media screen and (max-width: 780px) {
+      article {
+        padding: 10px;
+      }
+    }
   </style>
       <header>
         <nav class="navbar navbar-expand-lg navbar-light">
