--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
                         <li>Usused furniture for some extra space.</li>
                         <li>General unused items you just want to get rid of.</li>
                     </ul>
-                    <br>
-                    <h2>Couchsurfing</h2>
+            
+                    <h2 style="margin-top: 0px;">Couchsurfing</h2>
                     <ul>
                         <li>Find locals to share some space with at low cost!</li>
                     </ul>
