--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
         <!-- TODO: insert everything in containers like in the about section -->
         <!-- MAKE SOME EXTRA MONEY SECTION -->
-        <div class="body">
+        <div class="body notInverted" >
             <!-- studygroup -->
             <article id="studyGroupsSection">
                 <div class="left image">
@@ -168,6 +168,31 @@
                     </div>
                 </div>
        </article>
+   </div>
+
+   <div class="inverted">
+       <div class="body">
+        <!-- studygroup -->
+        <article id="studyGroupsSection">
+            <div class="right text">
+                <div class="red">
+                    <h2>Make some extra $$$ & find what you need!</h2>
+                   <ul>
+                       <li>Buy or list courses for sale.</li>
+                       <li>Buy or list books for sale.</li>
+                       <li>Find or list tutoring sessions.</li>
+                       <li>Find or list housing options.</li>
+                       <li>Buy or sell personal items.</li>
+                       <li>Book a trip to get to class on time.</li>
+                   </ul>
+                </div>
+            </div>
+            <div class="left image">
+                <!-- image -->
+                <img src="./images/cash.jpg" alt="" class="image1">
+            </div>
+       </article>
+       </div>
    </div>
 
    <!-- TODO: insert everything in containers like in the about section -->
