--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
             </div> 
         </div>
 
+        <div class="offer"><span>Special Offer: </span> Sign Up and List an Item before 6/30 to win a Starbucks Gift Card! </div>
+
         <!-- TODO: insert everything in containers like in the about section -->
         <!-- STUDY GROUP SECTION -->
         <div class="body firstBody">
@@ -164,12 +166,10 @@
                     <div class="red">
                         <h2>Make some extra $$$ & find what you need!</h2>
                        <ul>
-                           <li>Buy or list courses for sale.</li>
-                           <li>Buy or list books for sale.</li>
-                           <li>Find or list tutoring sessions.</li>
-                           <li>Find or list housing options.</li>
-                           <li>Buy or sell personal items.</li>
-                           <li>Book a trip to get to class on time.</li>
+                           <li>List your old textbooks for sale!</li>
+                           <li>List 1-1 tutoring virtual or in person to make some extra cash!</li>
+                           <li>Made extra cookies? Sell it!</li>
+                           <li>Unused home items lying around? Sell them!</li>
                        </ul>
                     </div>
                 </div>
@@ -213,16 +213,22 @@
                </div>
                <div class="right text">
                    <div class="black">
-                    <h2>Donate unused items!</h2>
+
+                    <h2>Couchsurfing</h2>
+                    <ul>
+                        <li> Crash on another college student's couch rather than paying a lot for a hotel!</li>
+                    </ul>
+
+                    <h2 style="margin-top: 0px;">Donate unused items!</h2>
                     <ul>
                         <li>Extra food that are good for consumption.</li>
                         <li>Usused furniture for some extra space.</li>
                         <li>General unused items you just want to get rid of.</li>
                     </ul>
-            
-                    <h2 style="margin-top: 0px;">Couchsurfing</h2>
+
+                    <h2 style="margin-top: 0px;">Find rideshare to get to class on time!</h2>
                     <ul>
-                        <li>Find locals to share some space with at low cost!</li>
+                        <li>Book a trip to your class with nearby students.</li>
                     </ul>
                    </div>
                </div>
