--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
 
         <!-- TODO: insert everything in containers like in the about section -->
         <!-- MAKE SOME EXTRA MONEY SECTION -->
+        <!-- this will display on smaller screens -->
         <div class="body notInverted" >
             <!-- studygroup -->
             <article id="studyGroupsSection">
@@ -176,6 +177,7 @@
        </article>
    </div>
 
+   <!-- This will display on larger screens -->
    <div class="inverted">
        <div class="body">
         <!-- studygroup -->
@@ -183,14 +185,12 @@
             <div class="right text">
                 <div class="red">
                     <h2>Make some extra $$$ & find what you need!</h2>
-                   <ul>
-                       <li>Buy or list courses for sale.</li>
-                       <li>Buy or list books for sale.</li>
-                       <li>Find or list tutoring sessions.</li>
-                       <li>Find or list housing options.</li>
-                       <li>Buy or sell personal items.</li>
-                       <li>Book a trip to get to class on time.</li>
-                   </ul>
+                       <ul>
+                           <li>List your old textbooks for sale!</li>
+                           <li>List 1-1 tutoring virtual or in person to make some extra cash!</li>
+                           <li>Made extra cookies? Sell it!</li>
+                           <li>Unused home items lying around? Sell them!</li>
+                       </ul>
                 </div>
             </div>
             <div class="left image">
@@ -209,31 +209,84 @@
             <article id="studyGroupsSection">
                <div class="left image">
                    <!-- image -->
-                   <img src="./images/sections/couch1.jpg" alt="" class="couchImage">
+                   <img src="./images/donations.png" alt="" class="couchImage">
                </div>
                <div class="right text">
                    <div class="black">
 
-                    <h2>Couchsurfing</h2>
-                    <ul>
-                        <li> Crash on another college student's couch rather than paying a lot for a hotel!</li>
-                    </ul>
+                    
 
-                    <h2 style="margin-top: 0px;">Donate unused items!</h2>
+                    <h2>Donate unused items!</h2>
                     <ul>
                         <li>Extra food that are good for consumption.</li>
                         <li>Usused furniture for some extra space.</li>
                         <li>General unused items you just want to get rid of.</li>
                     </ul>
-
-                    <h2 style="margin-top: 0px;">Find rideshare to get to class on time!</h2>
-                    <ul>
-                        <li>Book a trip to your class with nearby students.</li>
-                    </ul>
                    </div>
                </div>
        </article>
    </div>
+
+      <!-- This will display on larger screens -->
+      <!-- couchsurfing -->
+      <div class="inverted">
+        <div class="body">
+         <!-- studygroup -->
+         <article id="studyGroupsSection">
+             <div class="right text">
+                 <div class="red" style="background-color: #038480; color: white;">
+                    <h2>Couchsurfing</h2>
+                    <ul>
+                        <li style="padding-right: 20px;"> Crash on another college student's couch rather than paying a lot for a hotel!</li>
+                    </ul>
+                 </div>
+             </div>
+             <div class="left image">
+                 <!-- image -->
+                 <img src="./images/sections/couch1.jpg" alt="" class="image1">
+             </div>
+        </article>
+        </div>
+    </div>
+
+        <!-- this will display on smaller screens -->
+        <!-- couchsurfing -->
+        <div class="body notInverted" >
+            <!-- studygroup -->
+            <article id="studyGroupsSection">
+                <div class="left image">
+                    <!-- image -->
+                    <img src="./images/couch.jpeg" alt="" class="image1" style="background-size: cover;">
+                </div>
+                <div class="right text">
+                    <div class="red">
+                        <h2>Couchsurfing</h2>
+                    <ul>
+                        <li> Crash on another college student's couch rather than paying a lot for a hotel!</li>
+                    </ul>
+                    </div>
+                </div>
+       </article>
+   </div>
+
+   <!-- rideshare -->
+   <div class="body firstBody">
+    <!-- studygroup -->
+    <article id="studyGroupsSection">
+       <div class="left image">
+           <!-- image -->
+           <img src="./images/newRideShare.jpeg" alt="">
+       </div>
+       <div class="right text">
+           <div class="black">
+            <h2>Find rideshare to get to class on time!</h2>
+            <ul>
+                <li>Book a trip to your class with nearby students.</li>
+            </ul>
+           </div>
+       </div>
+</article>
+</div>
 
     <main>
         <div class="temporary">
